moar little improvements